Working on add employee

--- a/templates/admin_add_animal.html
+++ b/templates/admin_add_animal.html
@@ -1,7 +1,7 @@
 {% extends 'base_admin.html' %}
 
 {% block title %}
-    <title>RMS - Manager</title>
+    <title>Al Habibi Farm</title>
 {% endblock %}
 
 {% block page_header %}
