--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login RMS</title>
+	<title>Al Habibi Farm</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -33,7 +33,7 @@
 		<div class="container-login100" style="background-image: url({{url_for('static', filename='login/images/login-bg.jpg')}});">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
-					RMS Login
+					Al Habibi Farm Login
 				</span>
 				<form class="login100-form validate-form p-b-33 p-t-5" action="{{url_for('login_request')}}" method="post">
 
