--- a/templates/admin_add_employee.html
+++ b/templates/admin_add_employee.html
@@ -78,12 +78,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="EmployeePass01">Password</label>
-                            <input id="EmployeePass01" type="password" placeholder="Password" required="" class="form-control" name="EmployeePass01">
-                        </div>
-                        <div class="form-group">
-                            <label for="EmployeePass02">Repeat Password</label>
-                            <input id="EmployeePass02" data-parsley-equalto="#EmployeePass01" type="password" required="" placeholder="Re-enter Password" class="form-control" name="EmployeePass02">
+                            <label for="EmployeePass">Password</label>
+                            <input id="EmployeePass" type="password" placeholder="Password" required="" class="form-control" name="EmployeePass">
                         </div>
                         <div class="row">
                             <div class="col-sm-6 pb-2 pb-sm-4 pb-lg-0 pr-0">
