--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -82,16 +82,16 @@
                                     <div id="submenu-2" class="collapse submenu" style="">
                                         <ul class="nav flex-column">
                                             <li class="nav-item">
-                                                <a class="nav-link" href="/Admin/Animal/Goat"><i class="fa fa-fw fa-user-circle"></i>Goat</a>
+                                                <a class="nav-link" href="/Admin/Animals/Goat"><i class="fa fa-fw fa-user-circle"></i>Goat</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="/Admin/Animal/Sheep"><i class="fa fa-fw fa-user-circle"></i>Sheep</a>
+                                                <a class="nav-link" href="/Admin/Animals/Sheep"><i class="fa fa-fw fa-user-circle"></i>Sheep</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="/Admin/Animal/Camel"><i class="fa fa-fw fa-user-circle"></i>Camel</a>
+                                                <a class="nav-link" href="/Admin/Animals/Camel"><i class="fa fa-fw fa-user-circle"></i>Camel</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="/Admin/Animal/Horse"><i class="fa fa-fw fa-user-circle"></i>Horse</a>
+                                                <a class="nav-link" href="/Admin/Animals/Horse"><i class="fa fa-fw fa-user-circle"></i>Horse</a>
                                             </li>
 
                                         </ul>
