--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -117,6 +117,21 @@
                                     </div>
                                 </li>
 
+                                <li class="nav-item ">
+                                    <a class="nav-link active" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-3" aria-controls="submenu-3"><i class="fa fa-fw fa-user-circle"></i>More<span class="badge badge-success">6</span></a>
+                                    <div id="submenu-3" class="collapse submenu" style="">
+                                        <ul class="nav flex-column">
+
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="/Admin/More/Owner"><i class="fa fa-fw fa-user-circle"></i>Owner</a>
+                                            </li>
+                                             <li class="nav-item">
+                                                <a class="nav-link" href="/Admin/More/Employee"><i class="fa fa-fw fa-user-circle"></i>Employee</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+
 
                             </ul>
                         </div>
