view Animals Done

--- a/templates/admin_add_owner.html
+++ b/templates/admin_add_owner.html
@@ -51,7 +51,7 @@
                     <form action="{{url_for('admin_add_owner')}}" id="AddEmployeeForm" data-parsley-validate="" method="post">
 
                         <div class="form-group">
-                            <label for="OwnerName">Employee Name</label>
+                            <label for="OwnerName">Owner Name</label>
                             <input id="OwnerName" type="text" name="OwnerName" data-parsley-trigger="change" required="" placeholder="Enter owner name" autocomplete="off" class="form-control">
                         </div>
                         <div class="row">
