--- a/templates/animals_list.html
+++ b/templates/animals_list.html
@@ -11,7 +11,7 @@
     <div class="page-breadcrumb">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item" aria-current="page"><a href="{{ url_for('admin_add_animal')}}" class="breadcrumb-link">Add / Animal</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="{{ url_for('admin_add_animal')}}" class="breadcrumb-link">Add / Animal / {{title}}</a></li>
             </ol>
         </nav>
     </div>
@@ -19,4 +19,90 @@
 {% endblock %}
 
 {% block content %}
+        <!-- ============================================================== -->
+                    <!-- basic table  -->
+                    <!-- ============================================================== -->
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <div class="card">
+                            <h5 class="card-header">All {{title}}</h5>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered first">
+                                        <thead>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Owner</th>
+                                                <th>Breed</th>
+                                                <th>Sex</th>
+                                                <th>Father</th>
+                                                <th>Mother</th>
+                                                <th>Weight</th>
+                                                <th>Date of birth</th>
+                                                <th>Status</th>
+                                                <th>Details</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for animal in data %}
+                                            <tr>
+                                                <td>{{animal['AnimalTag']}}</td>
+                                                <td>{{animal['AnimalOwner']}}</td>
+                                                <td>{{animal['AnimalBreed']}}</td>
+                                                <td>{{animal['AnimalSex']}}</td>
+                                                <td>{{animal['AnimalFather']}}</td>
+                                                <td>{{animal['AnimalMother']}}</td>
+                                                <td>{{animal['AnimalWeight']}}</td>
+                                                <td>{{animal['AnimalDOB']}}</td>
+                                                <td>{{animal['AnimalStatus']}}</td>
+                                                <td><a href="/Admin/Animals/Details/{{animal['AnimalID']}}" class="btn btn-primary">View</a></td>
+                                            </tr>
+                                            {% endfor %}
+
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Owner</th>
+                                                <th>Breed</th>
+                                                <th>Sex</th>
+                                                <th>Father</th>
+                                                <th>Mother</th>
+                                                <th>Weight</th>
+                                                <th>Date of birth</th>
+                                                <th>Status</th>
+                                                <th>Details</th>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- ============================================================== -->
+                    <!-- end basic table  -->
+                    <!-- ============================================================== -->
+
 {% endblock %}
+
+{%block customJS%}
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery-3.3.1.min.js') }}"></script>
+    <script src=".{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/slimscroll/jquery.slimscroll.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/multi-select/js/jquery.multi-select.js') }}"></script>
+    <script src="{{ url_for('static', filename='libs/js/main-js.js') }}"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/datatables/js/dataTables.bootstrap4.min.js') }}"></script>
+    <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/datatables/js/buttons.bootstrap4.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/datatables/js/data-table.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.colVis.min.js"></script>
+    <script src="https://cdn.datatables.net/rowgroup/1.0.4/js/dataTables.rowGroup.min.js"></script>
+    <script src="https://cdn.datatables.net/select/1.2.7/js/dataTables.select.min.js"></script>
+    <script src="https://cdn.datatables.net/fixedheader/3.1.5/js/dataTables.fixedHeader.min.js"></script>
+
+{%endblock%}
