--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
 				<form class="login100-form validate-form p-b-33 p-t-5" action="{{url_for('login_request')}}" method="post">
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="emailOrPhone" placeholder="Email or Phone No.">
+						<input class="input100" type="text" name="emailOrPhone" placeholder="Email">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
