--- a/templates/admin_add_animal.html
+++ b/templates/admin_add_animal.html
@@ -92,10 +92,10 @@
                             <input type="date" id="AnimalDOB" name="AnimalDOB">
 
                         </div>
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label for="AnimalWeight" class="col-form-label">Animal Weight</label>
                             <input id="AnimalWeight" type="number" step="0.01" class="form-control" placeholder="Weight" name="AnimalWeight">
-                        </div>
+                        </div>-->
 
 
                         <div class="custom-file mb-3">
