--- a/templates/animals_list.html
+++ b/templates/animals_list.html
@@ -36,7 +36,7 @@
                                                 <th>Sex</th>
                                                 <th>Father</th>
                                                 <th>Mother</th>
-                                                <th>Weight</th>
+                                                <!--<th>Weight</th>-->
                                                 <th>Date of birth</th>
                                                 <th>Status</th>
                                                 <th>Details</th>
@@ -51,7 +51,7 @@
                                                 <td>{{animal['AnimalSex']}}</td>
                                                 <td>{{animal['AnimalFather']}}</td>
                                                 <td>{{animal['AnimalMother']}}</td>
-                                                <td>{{animal['AnimalWeight']}}</td>
+                                                <!--<td>{{animal['AnimalWeight']}}</td>-->
                                                 <td>{{animal['AnimalDOB']}}</td>
                                                 <td>{{animal['AnimalStatus']}}</td>
                                                 <td><a href="/Admin/Animals/Details/{{animal['AnimalTag']}}" class="btn btn-primary">View</a></td>
@@ -67,7 +67,7 @@
                                                 <th>Sex</th>
                                                 <th>Father</th>
                                                 <th>Mother</th>
-                                                <th>Weight</th>
+                                                <!--<th>Weight</th>-->
                                                 <th>Date of birth</th>
                                                 <th>Status</th>
                                                 <th>Details</th>
